# AES

./: .gitignore  CMakeLists.txt  README.md  coverage.xml
.github/workflows/: build-and-test-config.yml  github-actions-demo.yml
project/include/: BaseBlockCipher.hpp  BaseCryptoUtils.hpp  KeySchedule.hpp  Rijndael.hpp  RijndaelBaseDefinitions.hpp  State.hpp
project/src/: BaseCryptoUtils.cpp  KeySchedule.cpp  Rijndael.cpp  State.cpp
scripts/: coverage-report.sh  generate_coverage_report.sh  rebuild.sh  recreate_build.sh  sanitizers-check.sh  valgrind-check.sh
tests/: BaseCryptoUtilsTests.cpp  KeyScheduleTests.cpp  RijndaelTests.cpp  StateTests.cpp
